--- a/walloff_web/walloff_web/static/css/base.css
+++ b/walloff_web/walloff_web/static/css/base.css
@@ -16,12 +16,11 @@ div.divider {
 	position: relative;
 	left: 12.5%;
 	width: 75%; height: 0.2em;
-	background: #EA3088;
-	margin-top: 1%;
+	/*margin-top: 1%;*/
 	margin-bottom: 1%;
-	-moz-box-shadow: 0 0 0.3em #EA3088;
-	-webkit-box-shadow: 0 0 0.3em #EA3088;
-	box-shadow: 0 0 0.3em #EA3088;
+	-moz-box-shadow: 0 0 0.3em #18CAE6;
+	-webkit-box-shadow: 0 0 0.3em #18CAE6;
+	box-shadow: 0 0 0.3em #18CAE6;
 }
 
 /* Header */
@@ -31,7 +30,6 @@ div.header {
 	width: 75%;
 	text-align: center;
 	line-height: 100%;
-	/*margin-top: 2%;*/
 	font-size: 3.0em;
 	box-shadow: inset 0 -7px 10px -8px #18CAE6;
 	text-shadow: 0 0 0.3em #18CAE6;
@@ -44,13 +42,13 @@ div.nav_bar {
 	width: 75%; 
 	line-height: 100%;
 	text-align: center;
-	/*padding-top: 10px;*/
-	/*padding-bottom: 3px;*/
-	margin-bottom: 2%;
+	/*margin-bottom: 2%;*/
 	color: #18CAE6;
-	/*border: medium solid #18CAE6;*/
 	text-shadow: 0 0 0.2em #18CAE6;
 	
+}
+div.nav_sec {
+	position: relative;	
 }
 
 /* Main Content */
@@ -59,14 +57,12 @@ div.main_cont {
 	left: 12.5%;
 	width: 75%;
 	text-align: center;
-	/*border: medium solid #18CAE6;*/
 }
 
 /* Links */
 div.nav_bar a { color: #18CAE6 }
 div.nav_bar a:link { color: #18CAE6 }
 div.nav_bar a:hover { color: #ff0000; text-shadow: 0 0 0.3em #ff0000; } 
-
 div.main_cont a { color: #0000ff; }
 div.main_cont a:link { color: #0000ff; }
 div.main_cont a:hover { color: #ffffff; }
