--- a/walloff_web/walloff_web/templates/base.html
+++ b/walloff_web/walloff_web/templates/base.html
@@ -1,3 +1,9 @@
+<!-- COLORS:
+	tron_blue: #18CAE6
+       	dark_magenta: #EA3088
+ 	orange: #FF4719 
+-->
+
 <!doctype html>
 <html lang-en>
 	<head>
@@ -5,23 +11,81 @@
 		<meta charset=utf-8>
 		<title>Walloff</title>
 
-		<link rel=stylesheet type="text/css" href="{% static "css/base.css" %}">
+		<link rel=stylesheet type="text/css" href="{% static "css/bootstrap.css" %}">
+
+		<style>
+			body {
+				background: #000000;
+			}
+
+			/* Customize Navbar */
+			.navbar-wrapper {
+				position: relative;
+				margin-top: 1%;
+			}
+			.navbar-inverse .navbar-inner {
+				background-image: -moz-linear-gradient(top, #333333, #222222);
+	 	 		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
+  				background-image: -webkit-linear-gradient(top, #333333, #222222);
+  				background-image: -o-linear-gradient(top, #333333, #222222);
+  				background-image: linear-gradient(to bottom, #333333, #222222);
+			}
+    			.navbar .navbar-inner {
+      				border: 0;
+      				-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+         			-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
+              			box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    			}
+			.navbar .navbar-inner .brand {
+				color: #18CAE6;
+			}
+			.navbar .navbar-inner .nav li a {
+				color: #18CAE6;
+			}
+
+			/* Customize Carousel */
+			.carousel {
+				position: relative;
+				width: 100%; height: auto;
+			}		
+			.carousel img {
+				min-width: 100%;
+				max-height: 60%;
+			}
+
+			/* Customize Container */
+		/*	.container {
+				margin-left: 10%;
+				margin-top: 3%;
+				width: 80%; height: auto;
+				text-align: center;
+			}*/	
+		</style>
 
 	</head>
 	<body>
-		<div class="header">
-			<h1>Walloff</h1>
-		</div>
-		<div class="nav_bar">
-			| --&emsp;<a href="/" style="text-decoration: none;">Home</a> &emsp;-- | --&emsp;
-			<a href="/iterations/" style="text-decoration: none;">Iterations</a> &emsp;-- | --&emsp;
-			<a style="text-decoration: none;">Data Repo</a> &emsp;-- | --&emsp;	
-			<a style="text-decoration: none;">Creators</a> &emsp;-- |&emsp;	
-		</div>
-		<div class="divider"></div>
-		<div class="main_cont" id="swap_space">
+
+		<!-- Navbar
+		================================================= -->
+		<div class="container navbar-wrapper">
+			<div class="navbar navbar-inverse">
+  				<div class="navbar-inner">
+    					<a class="brand" href="/">Walloff</a>
+    					<ul class="nav">
+      						<li class="active"><a href="/">Home</a></li>
+      						<li><a href="#">About</a></li>
+      						<li><a href="/iterations/">Iterations</a></li>
+      						<li><a href="#">Creators</a></li>
+    					</ul></div></div></div><!-- Navbar -->
+
+		<!-- Main
+		================================================== -->
+		<div class="main" id="swap">
 			{% block swap %}
 			{% endblock %}
-		</div>
+		</div><!-- Main -->
+
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+    		<script src="{% static "js/bootstrap.min.js" %}"></script>
 	</body>
 </html>
