--- a/walloff_web/walloff_web/templates/index.html
+++ b/walloff_web/walloff_web/templates/index.html
@@ -1,5 +1,24 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block swap %}
-	This is the home page!
+
+	<div id="myCarousel" class="carousel slide">
+ 		<!-- Carousel items -->
+  		<div class="carousel-inner">
+    			<div class="active item">
+				<img src="{% static 'img/armegatron1.jpg' %}">
+			</div>
+    			<div class="item">
+				<img src="{% static 'img/armegatron2.jpg' %}">
+			</div>
+    			<div class="item">
+				<img src="{% static 'img/armegatron3.jpg' %}">
+			</div>
+  		</div>
+  		<!-- Carousel nav -->
+  		<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  		<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+	</div>
+
 {% endblock %}
