Started UI overhaul, added animations

--- a/walloff_android/res/layout/cred_store.xml
+++ b/walloff_android/res/layout/cred_store.xml
@@ -4,46 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="@string/todo"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/cred_store_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:hint="@string/cred_store_password"
-        android:inputType="textPassword" />
-
     <EditText
         android:id="@+id/cred_store_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/cred_store_password"
         android:layout_centerHorizontal="true"
-        android:ems="10"
         android:hint="@string/cred_store_username" />
-
+    
+    <EditText
+        android:id="@+id/cred_store_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cred_store_username"
+        android:layout_centerHorizontal="true"
+        android:hint="@string/cred_store_password"
+        android:inputType="textPassword" />
+    
     <EditText
         android:id="@+id/cred_store_password2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cred_store_password"
         android:layout_centerHorizontal="true"
-        android:ems="10"
         android:hint="@string/cred_store_password2"
         android:inputType="textPassword" >
-
-        <requestFocus />
     </EditText>
 
     <LinearLayout
