--- a/walloff_android/res/layout/main_menu.xml
+++ b/walloff_android/res/layout/main_menu.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent" >
 
     <include android:id="@+id/def" layout="@layout/main_menu_default"/>
+    <include android:id="@+id/single" layout="@layout/main_menu_single"/>
     <include android:id="@+id/multiplayer" layout="@layout/main_menu_multi"/>
     <include android:id="@+id/player" layout="@layout/main_menu_player"/>
     <include android:id="@+id/options" layout="@layout/main_menu_options"/>
