--- a/walloff_android/res/layout/main_menu_multi.xml
+++ b/walloff_android/res/layout/main_menu_multi.xml
@@ -3,7 +3,8 @@
     android:id="@+id/main_menu_multiplayer_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:tag="@string/multi_tag">
 
     <LinearLayout
         android:id="@+id/main_menu_multiplayer_btn_holder"
