--- a/walloff_android/res/layout/main_menu_single.xml
+++ b/walloff_android/res/layout/main_menu_single.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:tag="@string/options_tag" >
+    android:tag="@string/single_tag" >
+    
 
 </LinearLayout>
