--- a/walloff_android/res/layout/main_menu_options.xml
+++ b/walloff_android/res/layout/main_menu_options.xml
@@ -5,4 +5,11 @@
     android:orientation="vertical"
     android:tag="@string/options_tag" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/options_tag"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </LinearLayout>
