--- a/walloff_android/res/drawable/button_def.xml
+++ b/walloff_android/res/drawable/button_def.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/Black"/>
 	<corners android:radius="3dp"/>
-	<stroke android:width="3px" android:color="@color/TronBlue"/>
+	<stroke android:width="3dp" android:color="@color/TronBlue"/>
 </shape>
