--- a/walloff_android/res/layout/main_menu_player.xml
+++ b/walloff_android/res/layout/main_menu_player.xml
@@ -1,15 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/profile_parent"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:orientation="horizontal"
     android:tag="@string/profile_tag" >
 
-    <ImageView
-        android:id="@+id/profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+    <RelativeLayout
+        android:id="@+id/profile_left"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".5" >
+
+        <TextView
+            android:id="@+id/profile_avatar_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/profile_avitar_text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <ImageView
+            android:id="@+id/profile_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/profile_character_tag"
+            android:layout_alignLeft="@+id/profile_character_tag"
+            android:layout_alignRight="@+id/profile_character_tag"
+            android:layout_below="@+id/profile_avatar_text"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/profile_character_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/profile_character_text"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <ImageView
+            android:id="@+id/profile_character_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/profile_character_tag"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@+id/profile_character_tag"
+            android:layout_below="@+id/profile_character_tag"
+            android:scaleType="fitXY"
+            android:src="@drawable/character_sphere" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/profile_right"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".3" >
+
+    </RelativeLayout>
 
 </LinearLayout>
