--- a/walloff_web/walloff_web/templates/base.html
+++ b/walloff_web/walloff_web/templates/base.html
@@ -1,84 +1,49 @@
-<!-- COLORS:
-	tron_blue: #18CAE6
-       	dark_magenta: #EA3088
- 	orange: #FF4719 
--->
-
-<!doctype html>
+<!DOCTYPE>
 <html lang-en>
+
 	<head>
+		<!-- Points Django to our static files dir: { css, img, js } -->
 		{% load static %}
+
 		<meta charset=utf-8>
-		<title>Walloff</title>
+  		<title>WallOff</title>
 
-		<link rel=stylesheet type="text/css" href="{% static "css/bootstrap.css" %}">
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/x-icon" href="{% static 'logos/newlogo.png' %}">
 
-		<style>
-			body {
-				background: #000000;
-			}
+		<!-- CSS -->
+		<link rel="stylesheet" type="text/css" href="{% static 'css/wo.css' %}">
 
-			/* Customize Navbar */
-			.navbar-wrapper {
-				position: relative;
-				margin-top: 1%;
-			}
-			.navbar-inverse .navbar-inner {
-				background-image: -moz-linear-gradient(top, #333333, #222222);
-	 	 		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-  				background-image: -webkit-linear-gradient(top, #333333, #222222);
-  				background-image: -o-linear-gradient(top, #333333, #222222);
-  				background-image: linear-gradient(to bottom, #333333, #222222);
-			}
-    			.navbar .navbar-inner {
-      				border: 0;
-      				-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-         			-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
-              			box-shadow: 0 2px 10px rgba(0,0,0,.25);
-    			}
-			.navbar .navbar-inner .brand {
-				color: #18CAE6;
-			}
-			.navbar .navbar-inner .nav li a {
-				color: #18CAE6;
-			}
+		<!-- Core js/jQuery -->
+		<script type="text/javascript" src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
 
-			/* Customize Carousel */
-			.carousel {
-				position: relative;
-				width: 100%; height: auto;
-			}		
-			.carousel img {
-				min-width: 100%;
-				max-height: 60%;
+		<style type="text/css">
+			html {
+				background-image: url("{% static 'img/background.png' %}");
+				background-size:100%;
+				background-repeat:no-repeat;
+				background-attachment:fixed;		
 			}
-
+			nav h1::before {
+				content:url('{% static 'logos/newlogo.png' %}');
+			}
 		</style>
-
 	</head>
+
 	<body>
+		<!-- Logo Navigation -->
+		<nav role="navigation">
+			<h1 onclick = "void(0);">Iterations</h1>
+			<ol>
+				<li><a href="/">Home</a></li>
+				<li><a href="/iterations">Iterations</a></li>
+				<li><a href="/blog">Blog</a></li>
+				<li><a href="/creators">Creators</a></li>
+			</ol>
 
-		<!-- Navbar
-		================================================= -->
-		<div class="container navbar-wrapper">
-			<div class="navbar navbar-inverse">
-  				<div class="navbar-inner">
-    					<a class="brand" href="/">Walloff</a>
-    					<ul class="nav">
-      						<li class="active"><a href="/">Home</a></li>
-      						<li><a href="#">About</a></li>
-      						<li><a href="/iterations/">Iterations</a></li>
-      						<li><a href="#">Creators</a></li>
-    					</ul></div></div></div><!-- Navbar -->
-
-		<!-- Main
-		================================================== -->
-		<div class="main" id="swap">
-			{% block swap %}
-			{% endblock %}
-		</div><!-- Main -->
-
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-    		<script src="{% static "js/bootstrap.min.js" %}"></script>
+		</nav>
+		
+		<!-- Content -->
+		{% block content %}{% endblock %}
 	</body>
 </html>
